<resources>
    <string name="app_name">F&amp;L</string>
    <string name="splash_bottom_info">F&amp;L</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--face id apps-->
    <string name="facebook_app_id">409682249432747</string>
    <string name="fb_login_protocol_scheme">fb409682249432747</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_cung">MenuCungActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Message -->
    <string name="dialog_loading">Loading...</string>
    <string name="toast_loi_ket_noi">Lỗi kết nối!</string>
    <string name="toast_loi_ket_noi_server">Lỗi kết nối server!</string>
    <string name="toast_loi_data">Lỗi data</string>
    <string name="toast_loi_data_server">Lỗi data server</string>
    <string name="toast_dang_nhap_thanh_cong">Hello</string>
    <string name="toast_dang_nhap_that_bai">Sai thông tin đăng nhập!</string>
    <string name="toast_dang_ky_thanh_cong">Đăng ký thành công!</string>
    <string name="toast_dang_ky_that_bai">Đăng ký thất bại!</string>
    <string name="toast_nhap_thieu">Thiếu thông tin cần thiết!</string>
    <string name="dialog_thong_bao_internet_error">Kiểm tra kết nối và thử lại</string>

    <!-- My Shopping -->
    <string name="title_my_shopping">MY SHOPPING</string>
    <string name="title_message">Hi</string>
    <string name="item_title_tai_khoan">Tài khoản</string>

    <!-- Giỏ hàng -->
    <string name="title_gio_hang">GIỎ HÀNG</string>
    <string name="message_gio_hang">Giỏ hàng của bạn chưa có sản phẩm</string>
    <string name="message_dang_nhap_gio_hang">Đăng nhập để lưu các sản phẩm bạn muốn mua vào giỏ hàng.</string>
    <string name="bat_dau_mua_sam">Bắt đầu mua sắm</string>
    <string name="tao_cam_hung">Tạo cảm hứng</string>
    <!-- Giỏ hàng có sản phẩm -->
    <string name="title_hoa_don">TỔNG CHI PHÍ GIỎ HÀNG</string>
    <string name="so_luong_san_pham_gio_hang">SỐ LƯỢNG: </string>
    <string name="gia_tri_gio_hang">GIÁ TRỊ GIỎ HÀNG: </string>
    <string name="tien_khuyen_mai">KHUYẾN MÃI: </string>
    <string name="gia_giam_gio_hang">SAU GIẢM GIÁ: </string>
    <string name="tong_gia_tri_gio_hang">TỔNG: </string>
    <string name="xac_nhan_gio_hang">Xác nhận</string>
    <!-- Đăng nhập -->
    <string name="title_dang_nhap">ĐĂNG NHẬP</string>
    <string name="title_user_name">Username:</string>
    <string name="title_password">Password:</string>
    <string name="hint_user_name">Nhập username</string>
    <string name="hint_password">Nhập password</string>
    <string name="luu_dang_nhap">Lưu đăng nhập</string>
    <string name="nut_dang_nhap">Đăng nhập</string>
    <string name="dang_ky">Đăng ký</string>

    <!-- Đăng nhập không lưu -->
    <string name="tai_khoan_khac">(<u><b>Tài khoản khác</b></u>)</string>

    <!-- Tài khoản -->
    <string name="title_tai_khoan">TÀI KHOẢN</string>
    <string name="doi_mat_khau">ĐỔI MẬT KHẨU ?</string>
    <string name="title_group_thong_tin_ca_nhan">THÔNG TIN CÁ NHÂN</string>
    <string name="title_group_thong_tin_khac">THÔNG TIN KHÁC</string>
    <string name="title_username">USERNAME(E-MAIL)</string>
    <string name="title_country">COUNTRY:</string>
    <string name="nut_sua_thong_tin">Sửa thông tin</string>

    <!-- Thông tin cá nhân -->
    <string name="title_thong_tin_ca_nhan">THÔNG TIN CÁ NHÂN</string>
    <string name="thong_tin_bat_buoc">Thông tin bắt buộc *</string>
    <string name="ho">Họ:</string>
    <string name="ten">Tên:</string>
    <string name="username_thong_tin_ca_nhan">Username(E-mail): *</string>
    <string name="ngay_sinh">Ngày sinh:</string>
    <string name="dinh_dang_ngay">(DDMMYYYY)</string>
    <string name="note_ngay_sinh">Lưu ý ngày sinh không thể thay đổi sau khi sửa</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="thanh_pho">Thành phố:</string>
    <string name="cb_giao_hang">Giao tới địa chỉ này</string>
    <string name="dia_chi_thay_the">ĐỊA CHỈ GIAO HÀNG THAY THẾ</string>
    <string name="so_dien_thoai">Số điện thoại:</string>
    <string name="so_dien_thoai_khac">Số điện thoại khác:</string>
    <string name="note_sdt">Số điện thoại chỉ được liên lạc khi chúng tôi cần trao đổi về đơn hàng</string>
    <string name="the_nhan_vien">Thẻ nhân viên:</string>
    <string name="gioi_tinh">Giới tính:</string>
    <string name="gioi_tinh_nam">Nam</string>
    <string name="gioi_tinh_nu">Nữ</string>
    <string name="cb_nhan_thong_tin">Nhận thông tin mới qua email</string>
    <string name="note_privacy_policy">Ấn lưu đồng nghĩa với việc bạn đồng ý với <u>Chính Sách Bảo Mật</u></string>
    <string name="nut_luu">Lưu</string>
    <string name="nut_huy">Hủy</string>

    <!-- Chi tiết danh mục sản phẩm -->
    <string name="text_so_luong_nganh_thoi_trang">sản phẩm</string>
    <string name="loc_san_pham">Lọc</string>
    <string name="sap_xep_san_pham">Sắp xếp</string>

    <!-- Dialog lọc sản phẩm -->
    <string name="xoa_lua_chon">Xóa lựa chọn</string>
    <string name="loc">Lọc</string>
    <string name="title_size">Size</string>
    <string name="title_color">Màu</string>

    <!-- Xu hướng thời trang -->
    <string name="xem_san_pham">XEM CÁC SẢN PHẨM</string>

    <!-- Thông tin sản phẩm -->
    <string name="description_san_pham">MÔ TẢ</string>
    <string name="details">CHI TIẾT</string>
    <string name="chon_size">Chọn\nSize</string>
    <string name="san_pham_phu_hop">Sản phẩm phù hợp</string>

    <!-- Fragment Dang Ky -->
    <string name="email_fragment_DangKy">Email(username):*</string>
    <string name="password_fragment_DangKy">Password:*</string>
    <string name="note_password_fragment_DangKy">Your password needs to contain least characters. User upper and lowercase letters together with number to make it more secure</string>
    <string name="re_type_password_fragment_DangKy">Re-type password*</string>
    <string name="name_fragment_DangKy">Name:</string>
    <string name="privacy_policy_fragment_DangKy">By clicking Register I accept the Privacy Policy</string>
    <string name="register_fragment_DangKy">Register</string>
    <string name="read_the_story">Xem thêm...</string>
    <string name="title_activity_maps">Map</string>
    <!-- Fragment Dang Ky -->
    <string name="Directions">Chỉ Đường</string>
    <string name="Phone_Number">+84 5678 9999 </string>
    <string name="In_This_Store_You_Can_Find">Các loại sản phẩm của cửa hàng</string>
    <string name="Opening_Hours">Giờ mở cửa</string>

    <!-- item listview sale -->
    <string name="San_Pham_Moi">Sản Phẩm Mới</string>


</resources>
