<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.MyShopping.TaiKhoan.DangNhapKhongLuuFragment">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/vertical_padding"
        android:background="@color/colorSecondaryDark"
        android:text="@string/title_dang_nhap"
        android:textColor="@color/colorText"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"/>

    <!-- Khung đăng nhập -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_khung"
        android:orientation="vertical"
        android:padding="@dimen/horizontal_padding">

        <!-- Username -->
        <TextView
            android:id="@+id/tvTenTaiKhoan_FragmentDangNhapKhongLuu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_user_name"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_size"/>

        <!-- Đăng nhập tài khoản khác-->
        <TextView
            android:id="@+id/tvTaiKhoanKhac_FragmentDangNhapKhongLuu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tai_khoan_khac"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_size" />

        <!-- Title nhập password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_khung_dang_nhap_margin"
            android:text="@string/title_password"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_size" />

        <!-- Ô nhập password -->
        <EditText
            android:id="@+id/etMatKhau_FragmentDangNhapKhongLuu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/edittext_padding"
            android:textSize="@dimen/text_size" />

        <!-- Lưu đăng nhập, lấy mật khẩu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/item_khung_dang_nhap_margin">
            <!-- Lưu đăng nhập -->
            <CheckBox
                android:id="@+id/cbLuuDangNhap_FragmentDangNhapKhongLuu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/luu_dang_nhap"
                android:textSize="@dimen/text_size" />
            <!-- Quên mật khẩu -->
            <TextView
                android:id="@+id/tvQuenMatKhau_FragmentDangNhapKhongLuu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Quên mật khẩu?"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/text_size"
                android:textStyle="italic"/>
        </LinearLayout>

        <!-- Nút đăng nhập -->
        <Button
            android:id="@+id/btnDangNhap_FragmentDangNhapKhongLuu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/item_khung_dang_nhap_margin"
            android:background="@drawable/shape_button"
            android:text="@string/nut_dang_nhap"
            android:textColor="@color/colorChuButtonDangNhap" />
    </LinearLayout>


</LinearLayout>
